feat: add api documentation for product handler
