# internal/delivery/http/handler/product.go
@@ -2,24 +2,36 @@ package handler
 
 import (
 	"encoding/json"
-	"fmt"
 	"log"
 	"net/http"
 
 	"github.com/skyespirates/sikmatek/internal/entity"
+	"github.com/skyespirates/sikmatek/internal/response"
 	"github.com/skyespirates/sikmatek/internal/usecase"
+	"github.com/skyespirates/sikmatek/internal/validator"
 )
 
 type productHandler struct {
 	uc usecase.ProductUsecase
+	v  *validator.Validator
 }
 
-func NewProductHandler(uc usecase.ProductUsecase) *productHandler {
+func NewProductHandler(uc usecase.ProductUsecase, v *validator.Validator) *productHandler {
 	return &productHandler{
 		uc: uc,
+		v:  v,
 	}
 }
 
+// @Summary Create a product
+// @Description returns id of newly created product
+// @Tags product
+// @Accept json
+// @Produce json
+// @Param data body entity.CreateProductPayload true "Create Product"
+// @Success 200 {object} response.Response
+// @Router /products [post]
+// @Security BearerAuth
 func (h *productHandler) Create(w http.ResponseWriter, r *http.Request) {
 
 	var payload entity.CreateProductPayload
@@ -27,7 +39,16 @@ func (h *productHandler) Create(w http.ResponseWriter, r *http.Request) {
 	err := json.NewDecoder(r.Body).Decode(&payload)
 	if err != nil {
 		log.Println(err.Error())
-		http.Error(w, "bad request", http.StatusBadRequest)
+		errs := validator.FormatErrors(err)
+		response.Error(w, http.StatusBadRequest, "decoding error", errs)
+		return
+	}
+
+	err = h.v.Validate(payload)
+	if err != nil {
+		log.Println(err.Error())
+		errors := validator.FormatErrors(err)
+		response.Error(w, http.StatusBadRequest, "validation error", errors)
 		return
 	}
 
@@ -38,11 +59,19 @@ func (h *productHandler) Create(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	w.Header().Set("Location", fmt.Sprintf("/v1/products/%d", id))
-	w.WriteHeader(http.StatusCreated)
+	resp := map[string]any{"id_product": id}
+
+	response.Success(w, http.StatusCreated, "product created successfully", resp)
 
 }
 
+// @Summary Get list of products
+// @Description returns list of products
+// @Tags product
+// @Produce json
+// @Success 200 {object} response.Response
+// @Router /products [get]
+// @Security BearerAuth
 func (h *productHandler) List(w http.ResponseWriter, r *http.Request) {
 	products, err := h.uc.GetList(r.Context())
 	if err != nil {
@@ -51,12 +80,5 @@ func (h *productHandler) List(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	resp := map[string]any{}
-	resp["message"] = "list of products"
-	resp["products"] = products
-
-	err = json.NewEncoder(w).Encode(resp)
-	if err != nil {
-		http.Error(w, "error encoding", http.StatusInternalServerError)
-	}
+	response.Success(w, http.StatusOK, "list products", products)
 }
